[package]
name = "bddisasm-sys"
version = "0.1.0"
authors = ["Cristi Anichitei <ianichitei@bitdefender.com>"]
edition = "2018"
links = "bddisasm"
build = "build.rs"
license = "Apache-2.0"
repository = "https://github.com/bitdefender/bddisasm"
documentation = "https://docs.rs/bddisasm-sys"
description = """
Bindings to bddisasm instruction decoder library
"""
categories = ["external-ffi-bindings", "hardware-support"]
keywords = ["disassembler", "decoder", "x86", "amd64", "x86_64", "bindings"]

[lib]
name = "bddisasm_sys"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.70"
