[package]
name = "bddisasm-sys"
version = "0.2.1"
authors = ["Cristi Anichitei <ianichitei@bitdefender.com>"]
edition = "2018"
links = "bddisasm"
build = "build.rs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bitdefender/bddisasm"
documentation = "https://docs.rs/bddisasm-sys"
description = """
Bindings to bddisasm instruction decoder library
"""
categories = ["external-ffi-bindings", "hardware-support", "no-std"]
keywords = ["disassembler", "decoder", "x86", "amd64", "x86_64"]

[lib]
name = "bddisasm_sys"
path = "src/lib.rs"

[dependencies]
cty = "0.2.2"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.70"
